--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <body>
   <section class="container">
     <aside class="sidebar">
+      <input type="search" placeholder="Search..." class="search">
 
     </aside>
     <main class="Chat">
