creacion de la lista de contactos

--- a/index.html
+++ b/index.html
@@ -16,7 +16,18 @@
       <input type="search" placeholder="Search..." class="search">
 
     </aside>
-    <main class="Chat">
+    <main class="chat">
+      <ul>
+        <li>
+          <img src="/avatar.jpeg" alt="imagen del contacto">
+          <div>
+            <h4>Vincent Porter</h4>
+            <p class="status"> </p>
+
+          </div>
+        </li>
+
+      </ul>
 
 
     </main>
