definicion de la clase status a la etiqueta p de la lista de contactos

--- a/index.html
+++ b/index.html
@@ -17,12 +17,52 @@
 
     </aside>
     <main class="chat">
-      <ul>
+      <ul class="contact-list">
         <li>
-          <img src="/avatar.jpeg" alt="imagen del contacto">
+          <img src="/avatar.png" alt="imagen del contacto">
           <div>
             <h4>Vincent Porter</h4>
-            <p class="status"> </p>
+            <p class="status"> left 7 mins ago </p>
+
+          </div>
+        </li>
+        <li>
+          <img src="/avatar.png" alt="imagen del contacto">
+          <div>
+            <h4>Aiden Chavez</h4>
+            <p class="status">online</p>
+
+          </div>
+        </li>
+        <li>
+          <img src="/avatar.png" alt="imagen del contacto">
+          <div>
+            <h4>Mike Thomas</h4>
+            <p class="status">online</p>
+
+          </div>
+        </li>
+        <li>
+          <img src="/avatar.png" alt="imagen del contacto">
+          <div>
+            <h4>Christian Kelly</h4>
+            <p class="status"> left 10 hours ago </p>
+
+          </div>
+        </li>
+        <li>
+          <img src="/avatar.png" alt="imagen del contacto">
+          <div>
+            <h4>Monica Ward</h4>
+            <p class="status"> online </p>
+
+          </div>
+        </li>
+        <li>
+          <img src="/avatar.png" alt="imagen del contacto">
+          <div>
+            <h4>Dean Henry</h4>
+            <p class="status"> offline since Oct 28 </p>
 
           </div>
         </li>
