creacion del div chat-header para mostrar el contacto elegido y su estado

--- a/index.html
+++ b/index.html
@@ -69,6 +69,18 @@
     </aside>
 
     <main class="chat">
+      <section class="margin-top">
+        <div class="chat-header">
+          <img src="avatar.png" alt="imagen de perfil">
+          <h3>Aiden Chavez</h3>
+          <p>Last seen: 2 hours ago</p>
+
+        </div>
+
+
+
+
+      </section>
 
     </main>
 
