--- a/index.html
+++ b/index.html
@@ -76,6 +76,12 @@
           <p>Last seen: 2 hours ago</p>
 
         </div>
+        <div class="chat-actions">
+          <button title="Sacar foto">📷</button>
+          <button title="Adjuntar imagen">🖼️</button>
+          <button title="Configuración">⚙️</button>
+          <button title="Ayuda">❓</button>
+        </div>
 
 
 
