creacion del section chat-messages para mostrar el chat principal

--- a/index.html
+++ b/index.html
@@ -82,9 +82,8 @@
           <button title="Configuración">⚙️</button>
           <button title="Ayuda">❓</button>
         </div>
-
-
-
+      </section>
+      <section class="chat-messages">
 
       </section>
 
