creacion del div message-sent para mostrar el chat enviado

--- a/index.html
+++ b/index.html
@@ -84,6 +84,9 @@
         </div>
       </section>
       <section class="chat-messages">
+        <div class="message-sent"></div>
+        <p>Hi Aiden, how are you? How is the project coming along?</p>
+        <p></p>
 
       </section>
 
