creacion del div message-recived para mostrar el mensaje recibido

--- a/index.html
+++ b/index.html
@@ -84,10 +84,17 @@
         </div>
       </section>
       <section class="chat-messages">
-        <div class="message-sent"></div>
-        <p>Hi Aiden, how are you? How is the project coming along?</p>
-        <p></p>
+        <div class="message-sent">
+          <p>Hi Aiden, how are you? How is the project coming along?</p>
+          <p class="time">10:10 AM, Today</p>
+        </div>
+        <div class="chat-recived">
+          <p></p>
 
+        </div>
+        <div class="chat-recived">
+
+        </div>
       </section>
 
     </main>
