--- a/index.html
+++ b/index.html
@@ -89,13 +89,17 @@
           <p class="time">10:10 AM, Today</p>
         </div>
         <div class="chat-recived">
-          <p></p>
+          <p>Are we meeting today?</p>
+          <p class="time"> 10:12 AM, Today</p>
 
         </div>
         <div class="chat-recived">
+          <p>Project has been already finished and I have results to show you.</p>
+          <p class="time"> 10:15 AM, Today</p>
 
         </div>
       </section>
+
 
     </main>
 
