creacion del input para escribir el mensaje y el boton para poder enviarlo

--- a/index.html
+++ b/index.html
@@ -99,7 +99,10 @@
 
         </div>
       </section>
-
+      <section class="chat-footer">
+        <input type="text" placeholder="Enter text here...">
+        <button title="Enviar">✈️</button>
+      </section>
 
     </main>
 
