asignandole una clase a la lista de contactos

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <input type="search" placeholder="Search..." class="search">
 
       <ul class="contact-list">
-        <li>
+        <li class="contact">
           <img src="/avatar.png" alt="imagen del contacto">
           <div>
             <h4>Vincent Porter</h4>
@@ -24,7 +24,7 @@
 
           </div>
         </li>
-        <li>
+        <li class="contact">
           <img src="/avatar.png" alt="imagen del contacto">
           <div>
             <h4>Aiden Chavez</h4>
@@ -32,7 +32,7 @@
 
           </div>
         </li>
-        <li>
+        <li class="contact">
           <img src="/avatar.png" alt="imagen del contacto">
           <div>
             <h4>Mike Thomas</h4>
@@ -40,7 +40,7 @@
 
           </div>
         </li>
-        <li>
+        <li class="contact">
           <img src="/avatar.png" alt="imagen del contacto">
           <div>
             <h4>Christian Kelly</h4>
@@ -48,7 +48,7 @@
 
           </div>
         </li>
-        <li>
+        <li class="contact">
           <img src="/avatar.png" alt="imagen del contacto">
           <div>
             <h4>Monica Ward</h4>
@@ -56,7 +56,7 @@
 
           </div>
         </li>
-        <li>
+        <li class="contact">
           <img src="/avatar.png" alt="imagen del contacto">
           <div>
             <h4>Dean Henry</h4>
