--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           <img src="/avatar.png" alt="imagen del contacto">
           <div>
             <h4>Aiden Chavez</h4>
-            <p class="status">online</p>
+            <p class="status-online"> online</p>
 
           </div>
         </li>
@@ -36,7 +36,7 @@
           <img src="/avatar.png" alt="imagen del contacto">
           <div>
             <h4>Mike Thomas</h4>
-            <p class="status">online</p>
+            <p class="status-online"> online</p>
 
           </div>
         </li>
@@ -52,7 +52,7 @@
           <img src="/avatar.png" alt="imagen del contacto">
           <div>
             <h4>Monica Ward</h4>
-            <p class="status"> online </p>
+            <p class="status-online"> online </p>
 
           </div>
         </li>
