--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
       </ul>
     </aside>
 
-    <main class="chat">
-      <section class="margin-top">
+    <section class="chat">
+      <main class="margin-top">
         <div class="chat-header">
           <img src="avatar.png" alt="imagen de perfil">
           <h3>Aiden Chavez</h3>
@@ -82,33 +82,33 @@
           <button title="Configuración">⚙️</button>
           <button title="Ayuda">❓</button>
         </div>
-      </section>
-      <section class="chat-messages">
-        <div class="message-sent">
-          <p>Hi Aiden, how are you? How is the project coming along?</p>
-          <p class="time">10:10 AM, Today</p>
-        </div>
-        <div class="chat-recived">
-          <p>Are we meeting today?</p>
-          <p class="time"> 10:12 AM, Today</p>
 
-        </div>
-        <div class="chat-recived">
-          <p>Project has been already finished and I have results to show you.</p>
-          <p class="time"> 10:15 AM, Today</p>
+        <section class="chat-messages">
+          <div class="message-sent">
+            <p>Hi Aiden, how are you? How is the project coming along?</p>
+            <p class="time">10:10 AM, Today</p>
+          </div>
+          <div class="chat-recived">
+            <p>Are we meeting today?</p>
+            <p class="time"> 10:12 AM, Today</p>
 
-        </div>
-      </section>
-      <section class="chat-footer">
-        <input type="text" placeholder="Enter text here...">
-        <button title="Enviar">✈️</button>
-      </section>
+          </div>
+          <div class="chat-recived">
+            <p>Project has been already finished and I have results to show you.</p>
+            <p class="time"> 10:15 AM, Today</p>
+
+          </div>
+        </section>
+        <section class="chat-footer">
+          <input type="text" placeholder="Enter text here...">
+          <button title="Enviar">✈️</button>
+        </section>
+
+    </section>
+
+
 
     </main>
-
-
-
-
   </section>
 
 </body>
