dandole estilo al header del contacto seleccionado

--- a/index.html
+++ b/index.html
@@ -68,11 +68,11 @@
       </ul>
     </aside>
 
-    <section class="chat">
-      <main class="margin-top">
+    <main class="chat">
+      <section class="margin-top">
         <div class="chat-header">
           <img src="avatar.png" alt="imagen de perfil">
-          <h3>Aiden Chavez</h3>
+          <h4>Aiden Chavez</h4>
           <p>Last seen: 2 hours ago</p>
 
         </div>
@@ -82,34 +82,34 @@
           <button title="Configuración">⚙️</button>
           <button title="Ayuda">❓</button>
         </div>
+      </section>
 
-        <section class="chat-messages">
-          <div class="message-sent">
-            <p>Hi Aiden, how are you? How is the project coming along?</p>
-            <p class="time">10:10 AM, Today</p>
-          </div>
-          <div class="chat-recived">
-            <p>Are we meeting today?</p>
-            <p class="time"> 10:12 AM, Today</p>
+      <section class="chat-messages">
+        <div class="message-sent">
+          <p>Hi Aiden, how are you? How is the project coming along?</p>
+          <p class="time">10:10 AM, Today</p>
+        </div>
+        <div class="chat-recived">
+          <p>Are we meeting today?</p>
+          <p class="time"> 10:12 AM, Today</p>
 
-          </div>
-          <div class="chat-recived">
-            <p>Project has been already finished and I have results to show you.</p>
-            <p class="time"> 10:15 AM, Today</p>
+        </div>
+        <div class="chat-recived">
+          <p>Project has been already finished and I have results to show you.</p>
+          <p class="time"> 10:15 AM, Today</p>
 
-          </div>
-        </section>
-        <section class="chat-footer">
-          <input type="text" placeholder="Enter text here...">
-          <button title="Enviar">✈️</button>
-        </section>
-
-    </section>
-
-
+        </div>
+      </section>
+      <section class="chat-footer">
+        <input type="text" placeholder="Enter text here...">
+        <button title="Enviar">✈️</button>
+      </section>
 
     </main>
-  </section>
+
+
+
+
 
 </body>
 
