--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <div class="chat-header">
           <img src="avatar.png" alt="imagen de perfil">
           <h4>Aiden Chavez</h4>
-          <p>Last seen: 2 hours ago</p>
+          <p class="time">Last seen: 2 hours ago</p>
 
         </div>
         <div class="chat-actions">
