finalizando el breakpoint de la tablet

--- a/index.html
+++ b/index.html
@@ -72,9 +72,10 @@
       <section class="margin-top">
         <div class="chat-header">
           <img src="avatar.png" alt="imagen de perfil">
-          <h4>Aiden Chavez</h4>
-          <p class="time-header">Last seen: 2 hours ago</p>
-
+          <div class="contact-chavez">
+            <h4>Aiden Chavez</h4>
+            <p class="time-header">Last seen: 2 hours ago</p>
+          </div>
         </div>
         <div class="chat-actions">
           <button title="Sacar foto">📷</button>
