--- a/index.html
+++ b/index.html
@@ -87,16 +87,16 @@
 
       <section class="chat-messages">
         <div class="message-sent">
-          <p>Hi Aiden, how are you? How is the project coming along?</p>
+          <p class="p-message">Hi Aiden, how are you? How is the project coming along?</p>
           <p class="time">10:10 AM, Today</p>
         </div>
         <div class="chat-recived">
-          <p>Are we meeting today?</p>
+          <p class="p-message">Are we meeting today?</p>
           <p class="time"> 10:12 AM, Today</p>
 
         </div>
         <div class="chat-recived">
-          <p>Project has been already finished and I have results to show you.</p>
+          <p class="p-message">Project has been already finished and I have results to show you.</p>
           <p class="time"> 10:15 AM, Today</p>
 
         </div>
